--- a/libs/stocks/feature-shell/src/lib/stocks/stocks.component.html
+++ b/libs/stocks/feature-shell/src/lib/stocks/stocks.component.html
@@ -9,7 +9,7 @@
     <mat-error
       ><span
         *ngIf="
-          !stockPickerForm.get('symbol').valid &&
+          !stockPickerForm.get('symbol').valid ||
           stockPickerForm.get('symbol').touched
         "
         >Please enter a symbol</span
@@ -27,6 +27,15 @@
         {{ timePeriod.viewValue }}
       </mat-option>
     </mat-select>
+    <mat-error
+    ><span
+      *ngIf="
+        !stockPickerForm.get('period').valid ||
+        stockPickerForm.get('period').touched
+      "
+      >Please select your favorite period</span
+    >
+  </mat-error>
   </mat-form-field>
 
   <button (click)="fetchQuote()" mat-raised-button>Go</button>
